[package]
name = "veilid"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
veilid-core = "0.4.8" 
log = { workspace = true }
# todo make veilid optional
[lints]
workspace = true
